--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -6,7 +6,10 @@
     background: #ffffff none repeat scroll 0 0;
     border-bottom: 1px solid #e6e9f2;
 }
-
+.logo-default{
+    width: 62px;
+    margin-top: 4px!important;
+}
 #loader{
     width: 100%;
     height: 100%;
